# gMorge_dev_android

./: gradle.properties  settings.gradle.kts
applos/: CMakeLists.txt  build.gradle.kts
applos/gg/: build.gradle.kts
applos/gg/src/androidTest/java/com/freel/protection/app/: ExampleInstrumentedTest.kt
applos/gg/src/main/: AndroidManifest.xml
applos/gg/src/main/java/org/libsdl/app/: SDLActivity.java
applos/gg/src/main/res/layout/: activity_starta.xml
applos/gg/src/main/res/values/: themes.xml
applos/gg/src/main/res/values-night/: themes.xml
applos/gg/src/test/java/com/freel/protection/app/: ExampleUnitTest.kt
applos/src/androidTest/java/com/freel/protection/gmorge/: ExampleInstrumentedTest.kt
applos/src/main/: AndroidManifest.xml
applos/src/main/cpp/: build_timestamp-tmpl.h  common.cpp  common.h  icons_font_awesome.h  interface-emscripten.cpp  interface-unix.cpp  interface.cpp  interface.h  logs.h  native-lib.cpp
applos/src/main/java/com/freel/protection/gmorge/: MainActivity.kt
applos/src/main/res/values/: strings.xml  themes.xml
applos/src/main/res/values-night/: themes.xml
applos/src/test/java/com/freel/protection/gmorge/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
